[gd_scene load_steps=32 format=3 uid="uid://yuwaag04g2rk"]

[ext_resource type="Script" path="res://Scripts/Character/Player/player_token.gd" id="1_qb8vg"]
[ext_resource type="Script" path="res://Scripts/Components/character_move_component.gd" id="1_wn1rp"]
[ext_resource type="Resource" uid="uid://dagtaectam4eg" path="res://Resources/Characters/Player/player_move_stats.tres" id="2_wlba3"]
[ext_resource type="Script" path="res://Scripts/Components/manual_controller.gd" id="3_jf6ss"]
[ext_resource type="Script" path="res://Scripts/Components/state_component.gd" id="3_l1o11"]
[ext_resource type="Script" path="res://Scripts/Components/vitals_component.gd" id="4_h0nkj"]
[ext_resource type="Script" path="res://Scripts/Components/health_component.gd" id="5_axmk7"]
[ext_resource type="Script" path="res://Scripts/Components/jump_component.gd" id="5_m40v5"]
[ext_resource type="Resource" uid="uid://o6je0u30im4j" path="res://Resources/Characters/Player/player_vital_stats.tres" id="6_wchwb"]
[ext_resource type="Script" path="res://Scripts/Components/mana_component.gd" id="7_e55l8"]
[ext_resource type="Script" path="res://Scripts/Components/stamina_component.gd" id="8_5ewkp"]
[ext_resource type="Script" path="res://Scripts/Components/hurtbox_component.gd" id="9_ddqyb"]
[ext_resource type="Script" path="res://Scripts/Components/weapon_holder_component.gd" id="12_y1w8h"]
[ext_resource type="PackedScene" uid="uid://c00u3ms5qay26" path="res://Scenes/Characters/Player/player_hud.tscn" id="14_i6hp6"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_1wq23"]
radius = 0.172286
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_d7mft"]
radius = 0.0795995
height = 1.0

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_rng12"]
radius = 0.185572
height = 1.2

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_ssqe7"]
radius = 0.121328
height = 0.793406

[sub_resource type="CapsuleMesh" id="CapsuleMesh_808wx"]
radius = 0.075
height = 0.225

[sub_resource type="CapsuleMesh" id="CapsuleMesh_qegwo"]
radius = 0.025
height = 0.1

[sub_resource type="CapsuleMesh" id="CapsuleMesh_720jc"]
radius = 0.015
height = 0.075

[sub_resource type="CylinderMesh" id="CylinderMesh_pipmk"]
top_radius = 0.045
bottom_radius = 0.05
height = 0.075

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2r01n"]
radius = 0.16
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_gdnax"]
radius = 0.155
height = 0.7

[sub_resource type="BoxMesh" id="BoxMesh_kmu5w"]
size = Vector3(0.3, 0.15, 0.225)

[sub_resource type="CapsuleMesh" id="CapsuleMesh_tb0ru"]
radius = 0.05
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2tkjg"]
radius = 0.05
height = 0.5

[sub_resource type="CapsuleMesh" id="CapsuleMesh_jcgru"]
radius = 0.08
height = 0.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_xodvw"]
radius = 0.08
height = 0.7

[sub_resource type="CapsuleMesh" id="CapsuleMesh_2ijir"]
radius = 0.1
height = 0.35

[sub_resource type="CapsuleMesh" id="CapsuleMesh_6vrsu"]
radius = 0.1
height = 0.35

[node name="PlayerToken" type="CharacterBody3D" node_paths=PackedStringArray("controller")]
script = ExtResource("1_qb8vg")
controller = NodePath("Controller")
sheet = ExtResource("6_wchwb")

[node name="Lower" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_1wq23")

[node name="Upper" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.02417, 0)
shape = SubResource("CapsuleShape3D_d7mft")

[node name="StateComponent" type="Node" parent="."]
script = ExtResource("3_l1o11")

[node name="Controller" type="Node" parent="." node_paths=PackedStringArray("model")]
script = ExtResource("3_jf6ss")
model = NodePath("..")

[node name="CharacterMoveComponent" type="Node" parent="." node_paths=PackedStringArray("model", "controller", "state")]
script = ExtResource("1_wn1rp")
sheet = ExtResource("2_wlba3")
model = NodePath("..")
controller = NodePath("../Controller")
state = NodePath("../StateComponent")

[node name="JumpComponent" type="Node" parent="." node_paths=PackedStringArray("controller", "state", "model")]
script = ExtResource("5_m40v5")
sheet = ExtResource("2_wlba3")
controller = NodePath("../Controller")
state = NodePath("../StateComponent")
model = NodePath("..")

[node name="VitalsComponent" type="Node" parent="." node_paths=PackedStringArray("hurtbox")]
script = ExtResource("4_h0nkj")
hurtbox = NodePath("../HurtboxComponent")

[node name="HealthComponent" type="Node" parent="." node_paths=PackedStringArray("model", "vitals")]
script = ExtResource("5_axmk7")
sheet = ExtResource("6_wchwb")
model = NodePath("..")
vitals = NodePath("../VitalsComponent")

[node name="ManaComponent" type="Node" parent="." node_paths=PackedStringArray("model", "vitals")]
script = ExtResource("7_e55l8")
sheet = ExtResource("6_wchwb")
model = NodePath("..")
vitals = NodePath("../VitalsComponent")

[node name="StaminaComponent" type="Node" parent="." node_paths=PackedStringArray("model", "vitals")]
script = ExtResource("8_5ewkp")
sheet = ExtResource("6_wchwb")
model = NodePath("..")
vitals = NodePath("../VitalsComponent")

[node name="WeaponHolderComponent" type="Node3D" parent="." node_paths=PackedStringArray("controller", "grip_point", "holster_point")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -1.19209e-07, 9.31323e-10)
script = ExtResource("12_y1w8h")
controller = NodePath("../Controller")
grip_point = NodePath("../Visuals/Body/Torso/WeaponArm/StaffGripPoint")
holster_point = NodePath("../Visuals/Body/Torso/Holster")

[node name="HurtboxComponent" type="Area3D" parent="."]
collision_layer = 2
script = ExtResource("9_ddqyb")

[node name="Lower" type="CollisionShape3D" parent="HurtboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.6, 0)
shape = SubResource("CapsuleShape3D_rng12")

[node name="Upper" type="CollisionShape3D" parent="HurtboxComponent"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.13627, 0)
shape = SubResource("CapsuleShape3D_ssqe7")

[node name="Visuals" type="Node3D" parent="."]

[node name="Body" type="Node3D" parent="Visuals"]

[node name="Head" type="Node3D" parent="Visuals/Body"]

[node name="Face" type="MeshInstance3D" parent="Visuals/Body/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.41788, 0)
mesh = SubResource("CapsuleMesh_808wx")

[node name="Eyes" type="MeshInstance3D" parent="Visuals/Body/Head/Face"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0.0081296, -0.0526189)
mesh = SubResource("CapsuleMesh_qegwo")

[node name="Nose" type="MeshInstance3D" parent="Visuals/Body/Head/Face"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, -0.0200872, -0.0853378)
mesh = SubResource("CapsuleMesh_720jc")

[node name="Neck" type="MeshInstance3D" parent="Visuals/Body/Head"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.29157, 0)
mesh = SubResource("CylinderMesh_pipmk")

[node name="Torso" type="Node3D" parent="Visuals/Body"]

[node name="Chest" type="MeshInstance3D" parent="Visuals/Body/Torso"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 1.11969, 0)
mesh = SubResource("CapsuleMesh_2r01n")

[node name="Abdomin" type="MeshInstance3D" parent="Visuals/Body/Torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.920441, 0)
mesh = SubResource("CapsuleMesh_gdnax")

[node name="Waist" type="MeshInstance3D" parent="Visuals/Body/Torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.665634, 0)
mesh = SubResource("BoxMesh_kmu5w")

[node name="LeftArm" type="MeshInstance3D" parent="Visuals/Body/Torso"]
transform = Transform3D(0.990329, 0.138741, 0, -0.138741, 0.990329, 0, 0, 0, 1, -0.257, 0.95, 0)
mesh = SubResource("CapsuleMesh_tb0ru")

[node name="WeaponArm" type="Node3D" parent="Visuals/Body/Torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.261, 1.2, 0.005)

[node name="RightArm" type="MeshInstance3D" parent="Visuals/Body/Torso/WeaponArm"]
transform = Transform3D(0.993171, -0.116671, 0, 0.116671, 0.993171, 0, 0, 0, 1, -0.0352587, -0.249542, 0.013052)
mesh = SubResource("CapsuleMesh_2tkjg")
skeleton = NodePath("../..")

[node name="StaffGripPoint" type="Marker3D" parent="Visuals/Body/Torso/WeaponArm"]
transform = Transform3D(1, 0, 0, 0, -0.0304861, 0.999535, 0, -0.999535, -0.0304861, -0.00945902, -0.46, 0.00701702)

[node name="Holster" type="Marker3D" parent="Visuals/Body/Torso"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.130816, 1.1657, 0.151648)

[node name="LowerBody" type="Node3D" parent="Visuals/Body"]

[node name="LeftLeg" type="MeshInstance3D" parent="Visuals/Body/LowerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, 0.35, 0)
mesh = SubResource("CapsuleMesh_jcgru")

[node name="RightLeg" type="MeshInstance3D" parent="Visuals/Body/LowerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, 0.35, 0)
mesh = SubResource("CapsuleMesh_xodvw")

[node name="LeftCrouch" type="MeshInstance3D" parent="Visuals/Body/LowerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125, 0.175, 0)
visible = false
mesh = SubResource("CapsuleMesh_2ijir")

[node name="RightCrouch" type="MeshInstance3D" parent="Visuals/Body/LowerBody"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.125, 0.175, 0)
visible = false
mesh = SubResource("CapsuleMesh_6vrsu")

[node name="CameraController" type="Node3D" parent="."]

[node name="Camera3D" type="Camera3D" parent="CameraController"]
transform = Transform3D(1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0.379722, 1.56329, 1.0789)
current = true

[node name="PlayerHud" parent="." node_paths=PackedStringArray("weapon_holder") instance=ExtResource("14_i6hp6")]
weapon_holder = NodePath("../WeaponHolderComponent")
